# rev

./: .graphqlrc  Cargo.toml  cuddle.yaml
crates/rev/: Cargo.toml
crates/rev-config/: Cargo.toml
crates/rev-config-derive/: Cargo.toml
crates/rev-config-derive/src/: lib.rs
crates/rev-config/src/: lib.rs
crates/rev-git-provider/: Cargo.toml
crates/rev-git-provider/github/graphql/: query.graphql
crates/rev-git-provider/src/: github.rs  lib.rs  models.rs  traits.rs
crates/rev-widget-list/: Cargo.toml
crates/rev-widget-list/src/: lib.rs
crates/rev/src/: action.rs  app.rs  application_config.rs  cli.rs  components.rs  config.rs  git_pull_requests.rs  logging.rs  main.rs  page.rs  tui.rs
crates/rev/src/components/: diff.rs  github_pr.rs  github_prs.rs  home.rs
crates/rev/src/components/github_pr/: comments.rs  status.rs
