[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
rev = { path = "crates/rev" }
rev-git-provider = { path = "crates/rev-git-provider" }
rev-widget-list = { path = "crates/rev-widget-list" }
rev-config = { path = "crates/rev-config" }
rev-config-derive = { path = "crates/rev-config-derive" }

anyhow = { version = "1.0.75" }
thiserror = {version = "2.0.0"}
async-trait = {version = "0.1.73"}
tokio = { version = "1", features = ["full"] }
tokio-util = {version = "0.7.9"}
futures = {version = "0.3.28"}
tracing = { version = "0.1", features = ["log"] }
tracing-error = {version = "0.2.0"}
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
clap = { version = "4.4.6", features = ["derive", "env"] }
dotenv = { version = "0.15.0" }
ratatui = {version = "0.30.0"}
crossterm = {version = "0.29.0", features = ["event-stream"]}
tui-term = {version = "0.2.0"}
vt100 = {version = "0.16.0"}
portable-pty = {version = "0.9.0"}
directories = {version = "6.0.0"}
http = {version = "1.0.0"}
kdl = {version = "6.0.0"}
serde_json = {version = "1"}
serde = {version = "1", features = ["derive"]}
graphql_client = {version = "0.15.0"}
reqwest = {version = "0.12.0", features = ["json"]}
which = {version = "8.0.0"}
tracing-test = {version = "0.2.4"}
chrono = {version = "0.4.31", features = ["serde"]}
timeago = {version = "0.5.0"}
proc-macro2 = {version = "1.0.69"}
quote = "1.0"
syn = "2.0"
heck = "0.5.0"
human-panic = "2.0.0"
