[package]
name = "rev-git-provider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
tokio.workspace = true
futures.workspace = true
tracing.workspace = true
async-trait.workspace = true
http.workspace = true
graphql_client.workspace = true
serde.workspace = true
reqwest.workspace = true

